@startuml

title __GAME1's Class Diagram__\n

  namespace com.example.keystone_try {
    namespace game1 {
      class com.example.keystone_try.game1.CalQuestion {
          - answerTv : TextView
          - btn0 : Button
          - btn1 : Button
          - btn2 : Button
          - btn3 : Button
          - btn4 : Button
          - btn5 : Button
          - btn6 : Button
          - btn7 : Button
          - btn8 : Button
          - btn9 : Button
          - btnClear : Button
          - btnOK : Button
          - gameOver : boolean
          - help : Button
          - highScoreTV : TextView
          - num1 : int
          - num1Tv : TextView
          - num2 : int
          - num2Tv : TextView
          - operator : TextView
          - random : Random
          - score : int
          - scoreTv : TextView
          - startDownTimer : CountDownTimer
          - timeCounterTV : TextView
          + onBackPressed()
          + onClick()
          # onCreate()
          - getRandomNumber()
          - initData()
          - startCounter()
      }
    }
  }
  

  namespace com.example.keystone_try {
    namespace game1 {
      class com.example.keystone_try.game1.CalTitle {
          ~ enter : Button
          ~ textView : TextView
          # onCreate()
          # onResume()
          - initData()
      }
    }
  }
  

  namespace com.example.keystone_try {
    namespace game1 {
      class com.example.keystone_try.game1.FailActivity {
          - backBtn : Button
          - scoreTv : TextView
          # onCreate()
      }
    }
  }
  

  namespace com.example.keystone_try {
    namespace game1 {
      class com.example.keystone_try.game1.SuccessActivity {
          - backBtn : Button
          - scoreTv : TextView
          # onCreate()
      }
    }
  }
  

  com.example.keystone_try.game1.CalQuestion .up.|> android.view.View.OnClickListener
  com.example.keystone_try.game1.CalQuestion -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.keystone_try.game1.CalTitle -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.keystone_try.game1.FailActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.keystone_try.game1.SuccessActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
